--- a/inner-pages/about-us.html
+++ b/inner-pages/about-us.html
@@ -793,13 +793,7 @@
                 </h2>
               </div>
               <p class="section-details about-us-page-details">
-                Investing in remote-friendly tools and technologies is essential
-                for enabling seamless collaboration and productivity. Implement
-                project management platforms like Trello to track tasks and
-                deadlines, and use video conferencing tools like Zoom or Google
-                Meet for virtual meetings and discussions. Explore collaborative
-                document editing tools such as Google Docs or Microsoft Office
-                Suite Online to facilitate.
+                Hexovision Technologies began with a passion for empowering businesses through data-driven digital marketing. Founded by a team of experts, we’ve grown from a small startup into a full-service agency offering SEO, social media, content, and web solutions. Our mission is to deliver measurable results and lasting success, helping businesses thrive in an ever-changing digital world.
               </p>
             </div>
           </div>
@@ -924,9 +918,7 @@
                   Building Bridges to Future.
                 </h2>
                 <p class="section-description-text mb0 services">
-                  We are committed to delivering personalized, data-driven
-                  strategies that enhance brand visibility, engage target
-                  audiences.
+                  At Hexovision, we connect brands with their audiences through innovative digital marketing and forward-thinking strategies.
                 </p>
               </div>
             </div>
@@ -968,17 +960,7 @@
                         <div class="mission-vision-title-description">
                           <h3 class="mission-vision-title">Our Goal</h3>
                           <p class="mission-vision-description-text">
-                            Our goal is to continuously innovate and improve our
-                            services to meet the evolving needs of our clients.
-                            We aim to expand our offerings, incorporate the
-                            latest technologies, and maintain a customer-centric
-                            approach in everything we do. By building long-term
-                            relationships with our clients and delivering
-                            measurable results, we strive to become their
-                            trusted partner in achieving online success. Our
-                            goal is to continuously innovate and improve our
-                            services to meet the evolving needs of our clients.
-                            We aim to expand our offerings, incorporate.
+                            At Hexovision Technologies, our goal is to drive business success through innovative digital marketing. We aim to deliver customized strategies that enhance online visibility, generate quality leads, and boost overall growth. By staying at the forefront of digital trends and leveraging data-driven insights, we strive to exceed client expectations and create lasting value. Our mission is to empower businesses to thrive in the digital landscape and achieve sustainable success.
                           </p>
                         </div>
                       </div>
@@ -1003,17 +985,7 @@
                         <div class="mission-vision-title-description">
                           <h3 class="mission-vision-title">Our Mission</h3>
                           <p class="mission-vision-description-text">
-                            Mission is to empower businesses of all sizes by
-                            providing top-tier web design services on a
-                            subscription basis. We strive to deliver innovative,
-                            user-friendly, and visually stunning websites that
-                            help our clients stand out in the digital landscape.
-                            By focusing on quality, creativity, and customer
-                            satisfaction, we aim to make professional web design
-                            accessible and affordable for everyone. Our mission
-                            is to empower businesses of all sizes by providing
-                            top-tier web design services on a subscription
-                            basis. We strive to deliver innovative.
+                            At Hexovision Technologies, our mission is to empower businesses with innovative digital marketing solutions that drive growth and success. We are dedicated to crafting data-driven strategies tailored to our clients' unique needs, enhancing their online presence, and achieving measurable results. By combining expertise, creativity, and cutting-edge technology, we aim to exceed expectations and foster long-term partnerships in the ever-evolving digital landscape.
                           </p>
                         </div>
                       </div>
@@ -1038,17 +1010,7 @@
                         <div class="mission-vision-title-description">
                           <h3 class="mission-vision-title">Our Vision</h3>
                           <p class="mission-vision-description-text">
-                            Our vision is to become the leading web design
-                            subscription service, known our exceptional
-                            creativity, technical expertise, and unwavering
-                            commitment to client success. We envision a future
-                            where every business, regardless of its size or
-                            budget, can have a high-quality, custom-designed
-                            website that effectively communicates brand engages
-                            its audience. We are dedicated to pushing the
-                            boundaries of web design to create digital
-                            experiences that inspire and captivate. Our vision
-                            is to become the leading web design.
+                            At Hexovision Technologies, our vision is to be the leading digital marketing partner that transforms businesses into industry leaders. We strive to set new standards in digital innovation by providing exceptional strategies and solutions that drive sustainable growth. Our goal is to build enduring relationships with clients, helping them navigate the digital landscape and achieve unparalleled success in a rapidly changing world.
                           </p>
                         </div>
                       </div>
@@ -1177,10 +1139,8 @@
               <h2 class="section-title core-title">
                 Heart &amp; Soul of Core Values.
               </h2>
-              <p class="section-description-text mb0 services">
-                we pride ourselves on offering a comprehensive suite of core
-                features designed to elevate your marketing efforts and drive
-                business.
+              <p class="section-description-text mb0 services" style="text-align: center;">
+                At Hexovision, our core values drive us: integrity, innovation, and excellence. We’re dedicated to delivering honest, creative, and exceptional results.
               </p>
             </div>
           </div>
