new branch update

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
               <nav role="navigation" class="nav-menu w-nav-menu">
                 <div class="nav-menu-flex">
                   <!-- Home -->
-                  <a href="#" class="nav-link w-nav-link">Home</a>
+                  <a href="index.html" class="nav-link w-nav-link">Home</a>
 
                   <!-- About Us -->
 
@@ -1665,11 +1665,7 @@
                             />
                             <p
                               style="color: #0d0d0d"
-                              class="service-contant-details"
-                            >
-                              Develop high-quality content that resonates with
-                              your audience, include.
-                            </p>
+                              class="service-contant-details">Craft compelling content to engage and convert your audience effectively.</p>
                             <a
                               href="/service/content-creation"
                               class="service-learn-more-link w-inline-block"
@@ -1701,7 +1697,7 @@
                                 style="color: hsla(0, 0%, 100%, 1)"
                                 class="service-name-link-name"
                               >
-                                Email Marketing
+                                Ai Automation
                               </h4></a
                             ><img
                               src="images/rectangle-204-20-4-.png"
@@ -1711,11 +1707,7 @@
                             />
                             <p
                               style="color: hsla(0, 0%, 100%, 1)"
-                              class="service-contant-details"
-                            >
-                              Build and nurture relationships with your
-                              customers through personalized.
-                            </p>
+                              class="service-contant-details">Boost efficiency with our advanced AI-driven solutions.</p>
                             <a
                               href="/service/email-marketing"
                               class="service-learn-more-link w-inline-block"
@@ -6261,7 +6253,7 @@
                   <div class="fotter-single-link-flex">
                     <div class="fotter-single-link-div">
                       <a
-                        href="/home"
+                        href="index.html"
                         aria-current="page"
                         class="fotter-single-link w-inline-block w--current"
                         ><div>Home</div></a
