Nav Bar And Footer Update

--- a/about-us.html
+++ b/about-us.html
@@ -117,7 +117,7 @@
                   <!-- About Us -->
 
                   <a
-                    href="/inner-pages/about-us.html"
+                    href="/about-us.html"
                     class="nav-link w-nav-link"
                     >About Us</a
                   >
@@ -140,7 +140,7 @@
                                 <div class="dropdown-menu-cms-single">
                                   <div class="dropdown-menu-cms-line"></div>
                                   <div class="dropdown-menu-cms">CMS</div>
-                                </div></a><a href="/inner-pages/services" class="dropdown-menu-text-link w-inline-block"><div>Services</div></a><a href="https://marqencyzf.webflow.io/service/public-relations" class="dropdown-menu-text-link w-inline-block"><div>services Single</div>
+                                </div></a><a href="/services.html" class="dropdown-menu-text-link w-inline-block"><div>Services</div></a><a href="https://marqencyzf.webflow.io/service/public-relations" class="dropdown-menu-text-link w-inline-block"><div>services Single</div>
                                 <div class="dropdown-menu-cms-single">
                                   <div class="dropdown-menu-cms-line"></div>
                                   <div class="dropdown-menu-cms">CMS</div>
@@ -187,7 +187,7 @@
                   <!-- Services -->
 
                   <a
-                    href="/inner-pages/services.html"
+                    href="/services.html"
                     class="nav-link w-nav-link"
                     >Services</a
                   >
@@ -484,7 +484,7 @@
               <a href="/index.html" class="inner-benner-text-link">Home</a>
               <div class="inner-benner-text-link">|</div>
               <a
-                href="/inner-pages/about-us"
+                href="/about-us.html"
                 aria-current="page"
                 class="inner-benner-text-link w--current"
                 >About Us</a
@@ -2836,12 +2836,12 @@
                       <a href="/index.html" class="fotter-single-link w-inline-block"
                         ><div>Home</div></a
                       ><a
-                        href="/inner-pages/about-us"
+                        href="about-us.html"
                         aria-current="page"
                         class="fotter-single-link w-inline-block w--current"
                         ><div>About Us</div></a
                       ><a
-                        href="/inner-pages/services"
+                        href="/services.html"
                         class="fotter-single-link w-inline-block"
                         ><div>Services</div></a
                       ><a
