--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                   <!-- About Us -->
 
                   <a
-                    href="/inner-pages/about-us.html"
+                    href="/about-us.html"
                     class="nav-link w-nav-link"
                     >About Us</a
                   >
@@ -896,18 +896,17 @@
                   <!-- Services -->
 
                   <a
-                    href="/inner-pages/services.html"
+                    href="/services.html"
                     class="nav-link w-nav-link"
                     >Services</a
                   >
 
                   <!-- Contact Us -->
                   <a
-                    href="https://calendly.com/hexovisiontechnologies/consultation_call"
-                    target="_blank"
+                    href="/blogs.html"
                     class="nav-link w-nav-link"
                   >
-                    Contact Us</a
+                    Blogs</a
                   >
 
                   <!-- Projects -->
@@ -1210,7 +1209,7 @@
                 </p>
                 <div class="_2-button-wrapper">
                   <a
-                    href="/inner-pages/about-us.html" target="_blank"
+                    href="/about-us.html" target="_blank"
                     class="primary-button w-inline-block"
                     ><div class="primary-button-text-block">
                       Get Started Now
@@ -1468,7 +1467,7 @@
                         with.
                       </p>
                       <a
-                        href="/inner-pages/services"
+                        href="/services.html"
                         class="primary-button w-inline-block"
                         ><div class="primary-button-text-block">
                           Explore All Services
@@ -1824,7 +1823,7 @@
                   we strive to be more than just service provider.
                 </p>
                 <a
-                  href="/inner-pages/about-us.html"
+                  href="/about-us.html"
                   class="primary-button w-inline-block"
                   ><div class="primary-button-text-block">More About Us</div>
                   <div class="primary-button-text-block is-text-absolute">
@@ -6156,7 +6155,7 @@
               </p>
               <div class="section-buttom-wrapper">
                 <a
-                  href="/inner-pages/about-us.html" target="_blank"
+                  href="/about-us.html" target="_blank"
                   class="primary-button w-inline-block"
                   ><div class="primary-button-text-block">Get Started Now</div>
                   <div class="primary-button-text-block is-text-absolute">
@@ -6259,12 +6258,12 @@
                         ><div>Home</div></a
                       >
                       <a
-                        href="/inner-pages/about-us"
+                        href="/inner-pages/"
                         class="fotter-single-link w-inline-block"
                         ><div>About Us</div></a
                       >
                       <a
-                        href="/inner-pages/services"
+                        href="/services.html"
                         class="fotter-single-link w-inline-block"
                         ><div>Services</div></a
                       >
@@ -6284,17 +6283,17 @@
                     </div>
 
                     <div class="fotter-single-link-div">
-                      <a href="/inner-pages/pricing" class="fotter-single-link w-inline-block"><div>Pricing</div></a>
+                      <a href="/blogs.html" class="fotter-single-link w-inline-block"><div>Blogs</div></a>
                       <a
                         href="/inner-pages/projects"
                         class="fotter-single-link w-inline-block"
-                        ><div>Projects</div></a
+                        ><div>Privacy Policies</div></a
                       >
                       <a
                         href="/inner-pages/contact-us.html"
                         class="fotter-single-link w-inline-block"
                       >
-                        Contact Us</a
+                      Terms & Conditions</a
                       >
                       <!-- <a href="https://marqencyzf.webflow.io/team/mr-david-martinez" class="fotter-single-link w-inline-block"><div>Team Single</div></a> -->
                       <!-- <a href="/inner-pages/articles" class="fotter-single-link w-inline-block"><div>Articles</div></a> -->
@@ -6302,9 +6301,9 @@
                     </div>
 
                     <div class="fotter-single-link-div">
-                      <a href="/inner-pages/contact-us" class="fotter-single-link w-inline-block"><div>Contact Us</div></a>
+                      <!-- <a href="/inner-pages/contact-us" class="fotter-single-link w-inline-block"><div>Contact Us</div></a>
                       <a href="/authentication-pages/sign-up" class="fotter-single-link w-inline-block"><div>Sign Up</div></a>
-                      <a href="/authentication-pages/sign-in" class="fotter-single-link w-inline-block"><div>Sign In</div></a>
+                      <a href="/authentication-pages/sign-in" class="fotter-single-link w-inline-block"><div>Sign In</div></a> -->
                       <!-- <a href="/authentication-pages/forgot-password" class="fotter-single-link w-inline-block"><div>Forgot Password</div></a> -->
                       <!-- <a href="/authentication-pages/reset-password" class="fotter-single-link w-inline-block"><div>Reset Password</div></a> -->
                     </div>
@@ -6317,7 +6316,7 @@
                   <div class="fotter-link-right-single-flex">
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
-                        <h5 class="fotter-single-link-title">Social Media</h5>
+                        <h5 class="fotter-single-link-title">Press Mentions</h5>
                         <img
                           src="images/service-20shape-20img.png"
                           loading="lazy"
@@ -6331,14 +6330,21 @@
                             href="https://www.instagram.com/hexovision/"
                             target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>Instagram</div></a
+                            ><div>Hindustan Times</div></a
                           >
                           <a
                             href="https://www.facebook.com/profile.php?id=61558529533907"
                             target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>FaceBook</div></a
+                            ><div>Business Journal</div></a
                           >
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            target="_blank"
+                            class="fotter-single-link w-inline-block"
+                            ><div>News Herald</div></a
+                          >
+                          
                           <!-- <a href="/utility-pages/changelog" class="fotter-single-link w-inline-block"><div>Changelog</div></a> -->
                           <!-- <a href="/utility-pages/license" class="fotter-single-link w-inline-block"><div>License</div></a> -->
                           <!-- <a href="/utility-pages/style-guide" class="fotter-single-link w-inline-block"><div>Style Guide</div></a> -->
