--- a/about-us.html
+++ b/about-us.html
@@ -103,7 +103,7 @@
             <a href="/" class="nav-main-logo-wrapper w-nav-brand"
               ><img
                 loading="lazy"
-                src="/images/logo.png"
+                src="images/logo.png"
                 alt=""
                 class="nav-main-logo"
             /></a>
@@ -112,7 +112,7 @@
               <nav role="navigation" class="nav-menu w-nav-menu">
                 <div class="nav-menu-flex">
                   <!-- Home -->
-                  <a href="/index.html" class="nav-link w-nav-link">Home</a>
+                  <a href="index.html" class="nav-link w-nav-link">Home</a>
 
                   <!-- About Us -->
 
@@ -140,7 +140,7 @@
                                 <div class="dropdown-menu-cms-single">
                                   <div class="dropdown-menu-cms-line"></div>
                                   <div class="dropdown-menu-cms">CMS</div>
-                                </div></a><a href="/services.html" class="dropdown-menu-text-link w-inline-block"><div>Services</div></a><a href="https://marqencyzf.webflow.io/service/public-relations" class="dropdown-menu-text-link w-inline-block"><div>services Single</div>
+                                </div></a><a href="/inner-pages/services" class="dropdown-menu-text-link w-inline-block"><div>Services</div></a><a href="https://marqencyzf.webflow.io/service/public-relations" class="dropdown-menu-text-link w-inline-block"><div>services Single</div>
                                 <div class="dropdown-menu-cms-single">
                                   <div class="dropdown-menu-cms-line"></div>
                                   <div class="dropdown-menu-cms">CMS</div>
@@ -194,11 +194,10 @@
 
                   <!-- Contact Us -->
                   <a
-                    href="https://calendly.com/hexovisiontechnologies/consultation_call"
-                    target="_blank"
+                    href="/blogs.html"
                     class="nav-link w-nav-link"
                   >
-                    Contact Us</a
+                    Blogs</a
                   >
 
                   <!-- Projects -->
@@ -476,6 +475,7 @@
           </div>
         </div>
       </div>
+
       <section class="section inner-benner">
         <div class="container">
           <div class="inner-benner-main-title-wrapper">
@@ -2816,6 +2816,7 @@
                   ></a>
                 </div>
               </div>
+
               <div class="fotter-shape-div"></div>
               <div
                 data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e4873846578"
@@ -2825,7 +2826,7 @@
                   <div class="fotter-single-link-wrap">
                     <h5 class="fotter-single-link-title">Menu</h5>
                     <img
-                      src="../images/rectangle-2069.svg"
+                      src="images/rectangle-2069.svg"
                       loading="lazy"
                       alt=""
                       class="fotter-div-img-shape"
@@ -2833,80 +2834,61 @@
                   </div>
                   <div class="fotter-single-link-flex">
                     <div class="fotter-single-link-div">
-                      <a href="/index.html" class="fotter-single-link w-inline-block"
-                        ><div>Home</div></a
-                      ><a
-                        href="about-us.html"
+                      <a
+                        href="index.html"
                         aria-current="page"
                         class="fotter-single-link w-inline-block w--current"
+                        ><div>Home</div></a
+                      >
+                      <a
+                        href="/inner-pages/"
+                        class="fotter-single-link w-inline-block"
                         ><div>About Us</div></a
-                      ><a
+                      >
+                      <a
                         href="/services.html"
                         class="fotter-single-link w-inline-block"
                         ><div>Services</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/service/public-relations"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Service Single</div></a
-                      ><a
+                      >
+                      <!-- <a href="https://marqencyzf.webflow.io/service/public-relations" class="fotter-single-link w-inline-block"><div>Service Single</div></a> -->
+                      <!-- <a
                         href="/inner-pages/projects"
                         class="fotter-single-link w-inline-block"
                         ><div>Projects</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/project/building-a-strong-seo-presence"
+                      > -->
+                      <!-- <a
+                        href="/inner-pages/contact-us.html"
                         class="fotter-single-link w-inline-block"
-                        ><div>Project Single</div></a
                       >
+                        Contact Us</a
+                      > -->
+                      <!-- <a href="https://marqencyzf.webflow.io/project/building-a-strong-seo-presence" class="fotter-single-link w-inline-block"><div>Project Single</div></a> -->
                     </div>
+
                     <div class="fotter-single-link-div">
+                      <a href="/blogs.html" class="fotter-single-link w-inline-block"><div>Blogs</div></a>
                       <a
-                        href="/inner-pages/pricing"
+                        href="/inner-pages/projects"
                         class="fotter-single-link w-inline-block"
-                        ><div>Pricing</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/product/starter-plan"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Pricing Single</div></a
-                      ><a
-                        href="/inner-pages/team"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Team</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/team/mr-david-martinez"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Team Single</div></a
-                      ><a
-                        href="/inner-pages/articles"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Articles</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/blog/how-to-create-an-engaging-content-that-converts"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Article Single</div></a
+                        ><div>Privacy Policies</div></a
                       >
+                      <a
+                        href="/inner-pages/contact-us.html"
+                        class="fotter-single-link w-inline-block"
+                      >
+                      Terms & Conditions</a
+                      >
+                      <!-- <a href="https://marqencyzf.webflow.io/team/mr-david-martinez" class="fotter-single-link w-inline-block"><div>Team Single</div></a> -->
+                      <!-- <a href="/inner-pages/articles" class="fotter-single-link w-inline-block"><div>Articles</div></a> -->
+                      <!-- <a href="https://marqencyzf.webflow.io/blog/how-to-create-an-engaging-content-that-converts" class="fotter-single-link w-inline-block"><div>Article Single</div></a> -->
                     </div>
+
                     <div class="fotter-single-link-div">
-                      <a
-                        href="/inner-pages/contact-us"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Contact Us</div></a
-                      ><a
-                        href="/authentication-pages/sign-up"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Sign Up</div></a
-                      ><a
-                        href="/authentication-pages/sign-in"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Sign In</div></a
-                      ><a
-                        href="/authentication-pages/forgot-password"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Forgot Password</div></a
-                      ><a
-                        href="/authentication-pages/reset-password"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Reset Password</div></a
-                      >
+                      <!-- <a href="/inner-pages/contact-us" class="fotter-single-link w-inline-block"><div>Contact Us</div></a>
+                      <a href="/authentication-pages/sign-up" class="fotter-single-link w-inline-block"><div>Sign Up</div></a>
+                      <a href="/authentication-pages/sign-in" class="fotter-single-link w-inline-block"><div>Sign In</div></a> -->
+                      <!-- <a href="/authentication-pages/forgot-password" class="fotter-single-link w-inline-block"><div>Forgot Password</div></a> -->
+                      <!-- <a href="/authentication-pages/reset-password" class="fotter-single-link w-inline-block"><div>Reset Password</div></a> -->
                     </div>
                   </div>
                 </div>
@@ -2917,9 +2899,9 @@
                   <div class="fotter-link-right-single-flex">
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
-                        <h5 class="fotter-single-link-title">Template</h5>
+                        <h5 class="fotter-single-link-title">Press Mentions</h5>
                         <img
-                          src="../images/service-20shape-20img.png"
+                          src="images/service-20shape-20img.png"
                           loading="lazy"
                           alt=""
                           class="fotter-div-img-shape"
@@ -2928,34 +2910,36 @@
                       <div class="fotter-single-link-flex">
                         <div class="fotter-single-link-div">
                           <a
-                            href="/404"
+                            href="https://www.instagram.com/hexovision/"
+                            target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>404 Not Found</div></a
-                          ><a
-                            href="/401"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Password Protected</div></a
-                          ><a
-                            href="/utility-pages/changelog"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Changelog</div></a
-                          ><a
-                            href="/utility-pages/license"
-                            class="fotter-single-link w-inline-block"
-                            ><div>License</div></a
-                          ><a
-                            href="/utility-pages/style-guide"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Style Guide</div></a
+                            ><div>Hindustan Times</div></a
                           >
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            target="_blank"
+                            class="fotter-single-link w-inline-block"
+                            ><div>Business Journal</div></a
+                          >
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            target="_blank"
+                            class="fotter-single-link w-inline-block"
+                            ><div>News Herald</div></a
+                          >
+                          
+                          <!-- <a href="/utility-pages/changelog" class="fotter-single-link w-inline-block"><div>Changelog</div></a> -->
+                          <!-- <a href="/utility-pages/license" class="fotter-single-link w-inline-block"><div>License</div></a> -->
+                          <!-- <a href="/utility-pages/style-guide" class="fotter-single-link w-inline-block"><div>Style Guide</div></a> -->
                         </div>
                       </div>
                     </div>
+
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
                         <h5 class="fotter-single-link-title">Contact</h5>
                         <img
-                          src="../images/service-20shape-20img.png"
+                          src="images/service-20shape-20img.png"
                           loading="lazy"
                           alt=""
                           class="fotter-div-img-shape"
@@ -2965,32 +2949,31 @@
                         <div class="fotter-single-link-div">
                           <div class="fotter-single-link">
                             <img
-                              src="../images/smart-phone-01-stroke-sharp-201.png"
+                              src="images/smart-phone-01-stroke-sharp-201.png"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
-                            <div>(000) 012 3456 7890</div>
+                            <div>+91 8923170795</div>
                           </div>
                           <div class="fotter-single-link">
                             <img
-                              src="../images/mail-01-stroke-sharp-201.png"
+                              src="images/mail-01-stroke-sharp-201.png"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
-                            <div>marqencyzf@email.com</div>
+                            <div>contact@hexovision.com</div>
                           </div>
                           <div class="fotter-single-link">
                             <img
-                              src="../images/location-01-stroke-sharp-201.png"
+                              src="images/location-01-stroke-sharp-201.png"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
                             <div class="fotter-contact-text">
-                              1234 Valencia Street, Suite 101, San Francisco, CA
-                              94110
+                              141 Park Road, Dehradun, Uttrakhand,India
                             </div>
                           </div>
                         </div>
@@ -3002,23 +2985,12 @@
               <div class="fotter-bottom-shape"></div>
               <div class="copy-right-text">
                 © Copyright -
-                <a href="/" class="copy-right-link">Marqency ZF</a> | Designed
-                by
-                <a
-                  href="https://webflow.com/templates/designers/shohana-sharmin"
-                  target="_blank"
-                  class="copy-right-link"
-                  >Zohaflow </a
-                >-
-                <a href="/utility-pages/license" class="copy-right-link"
-                  >Licensing </a
-                >Powered by
-                <a
-                  href="https://webflow.com/"
-                  target="_blank"
-                  class="copy-right-link"
-                  >Webflow</a
+                <a href="/" class="copy-right-link" style="text-decoration: none;"
+                  >Hexovision Technologies Private Limited</a
                 >
+                <!-- <a href="https://webflow.com/templates/designers/shohana-sharmin" target="_blank" class="copy-right-link">Zohaflow </a>
+                <a href="/utility-pages/license" class="copy-right-link">Licensing </a>Powered by
+                <a href="https://webflow.com/" target="_blank" class="copy-right-link">Webflow</a> -->
               </div>
             </div>
           </div>
