--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,6 @@
           <div class="container">
             <div class="benner-main-wrapper">
               <!-- 1st PAGE PART 1   -->
-
               <div
                 class="benner-top-title-wrapper"
                 data-w-id="6b94e268-56cf-2ef0-dfc4-787ff6c2224c"
@@ -1499,7 +1498,7 @@
                               alt=""
                               class="service-main-single-flex-icon"
                             /><a
-                              href="/service/ppc-advertising"
+                              href="  "
                               class="service-name-link-wrapper w-inline-block"
                               ><h4
                                 style="color: #0d0d0d"
@@ -4773,7 +4772,6 @@
           </div>
         </div>
       </section> -->
-
       <!-- Success Stories -->
       <section class="section success-stories">
         <div class="container">
@@ -6234,6 +6232,7 @@
                   ></a>
                 </div>
               </div>
+              
               <div class="fotter-shape-div"></div>
               <div
                 data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e4873846578"
