--- a/services.html
+++ b/services.html
@@ -1009,8 +1009,8 @@
                           style="color: #0d0d0d"
                           class="service-contant-details page"
                         >
-                        Craft compelling content to engage and convert your audience effectively.
-
+                          Craft compelling content to engage and convert your
+                          audience effectively.
                         </p>
                         <a
                           href="/service/content-creation"
@@ -1066,8 +1066,8 @@
                           style="color: hsla(0, 0%, 100%, 1)"
                           class="service-contant-details page"
                         >
-                        Boost efficiency with our advanced AI-driven solutions.
-
+                          Boost efficiency with our advanced AI-driven
+                          solutions.
                         </p>
                         <a
                           href="/service/email-marketing"
