--- a/index.html
+++ b/index.html
@@ -2788,7 +2788,7 @@
       </section>
 
       <!-- Trusted Partner -->
-      <section class="section partner">
+      <!-- <section class="section partner">
         <div class="container">
           <div class="partner-main-wrapper">
             <div
@@ -3080,7 +3080,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Seamless Process -->
       <section class="section process">
